archive/shlink/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink-api
  namespace: shlink
spec:
  selector:
    matchLabels:
      app: shlink-api
  replicas: 1
  template:
    metadata:
      labels:
        app: shlink-api
    spec:
      containers:
        - name: shlink-api
          image: shlinkio/shlink:3.7.3
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /rest/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /rest/health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shlink-web
  namespace: shlink
  labels:
    app: shlink-web
spec:
  selector:
    matchLabels:
      app: shlink-web
  replicas: 1
  template:
    metadata:
      labels:
        app: shlink-web
    spec:
      containers:
        - name: shlink-web
          image: shlinkio/shlink-web-client
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - name: http
              containerPort: 8080
      restartPolicy: Always
---
