archive/shlink/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shlink-ingressroute
  namespace: shlink
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`links.int.mvaldes.dev`)
      services:
        - name: shlink-svc-web
          port: 80
